@@ -1,3 +1,8 @@
+2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* modem-applet.c: Use G_DEFINE_TYPE macros. Patch from Jaap
+	Haitsma, Bug #459705.
+
 2007-07-17  Jaap Haitsma  <jaap@haitsma.org>
 
 	* GNOME_ModemLights.xml: Use gtk-about i.s.o. gnome-stock-about
