@@ -1,3 +1,8 @@
+2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* src/trash-monitor.c: Use G_DEFINE_TYPE macros. Patch from Jaap
+	Haitsma, Bug #459705.
+
 2007-10-02  Jan Arne Petersen  <jpetersen@jpetersen.org>
 
 	* docs/Makefile.am: Added German translation (by Tobias Höbel
