@@ -1,3 +1,10 @@
+2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c:
+	* dock.c:
+	* preferences.c: Use G_DEFINE_TYPE macros. Patch from Jaap
+	Haitsma, Bug #459705.
+
 2007-09-26  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* preferences.c: (cb_track_select): Plug leak.
